fix text overflow on movieCard

--- a/src/components/movieCard/movieCard.scss
+++ b/src/components/movieCard/movieCard.scss
@@ -23,9 +23,17 @@
       padding: 15px 0 0 15px;
       font-weight: bold;
       font-size: 24px;
+      display: -webkit-box;
+      min-height: 75px;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
       @media (max-width: 1300px) {
         font-size: 18px;
         grid-column: 2 / span 2;
+        min-height: 30px;
+        padding: 10px 0 0 5px;
       }
       span {
         margin-left: 5px;
@@ -51,6 +59,7 @@
     padding: 15px;
     @media (max-width: 1300px) {
       grid-row: 3;
+      padding: 5px;
     }
   }
   .checkbox {
@@ -77,7 +86,7 @@
       grid-column: 2;
       grid-row: 2;
       font-size: 18px;
-      padding-left: 15px;
+      padding-left: 5px;
     }
   }
 }
